# stock-trend-prediction

./: .clinerules  .gitignore  README.md  a.ipynb  analyze_hyperparams.py  bnquys-stock-trend-prediction-8a5edab282632443.txt  config.py  data_loader.py  eval.ipynb  evaluate.py  example.ipynb  hf_uploader.ipynb  main copy.ipynb  main.ipynb  main.py  predict.py  pyproject.toml  requirements.txt  test.ipynb  train.py  warmup_cache copy 2.ipynb  warmup_cache copy 3.ipynb  warmup_cache copy.ipynb  warmup_cache.ipynb  warmup_cache.py  xlstm_model.py
.clinerules/: repomix.md  tools.md
agent_trading/: analyze_volatility.py
configs/: agent.yaml  analysis.yaml  base.yaml  config.yaml  env.yaml  logging.yaml  training.yaml
data/: FPT.csv  VIC.csv  VNM.csv
docs/: experimental_results.md
llm/: VNM_cash_flow.csv  VNM_events.csv  VNM_financial_health.csv  VNM_income_statement.csv  VNM_info.csv  VNM_news.csv  VNM_notes.csv  VNM_shareholders.csv  pplx_embed_context_v1_4b.ipynb
logs/: llm_integration_summary_FPT.json  llm_integration_summary_VNM.json  llm_summary_FPT.md  llm_summary_HPG.md  roi_table_VNM.csv  test_results.json  test_results_HPG.pkl  test_results_VIC.pkl  training_history.json  training_log.json
models/: ckpt_ep100.pkl  ckpt_ep200.pkl  ckpt_ep250.pkl  ckpt_ep350.pkl  ckpt_ep400.pkl  last_model.pkl  scaler.pkl  test_agent.pkl
results/: backtest_results.csv  classification_report.txt
saved_models/: feature_cols.json  scaler.pkl  xlstm_vnm_best.pt
scripts/: bench.py  infer.py  train.py
src/: config.py  logging_config.py
stock_analysis/: README.md  (+11 more)
(+140 files in other folders)
