[project]
name = "stock-trend-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
]
