[project]
name = "stock-trend-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "gradio-client>=2.5.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "sentence-transformers>=5.5.1",
    "tabulate>=0.10.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "transformers>=5.9.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
train = "scripts.train:main"
infer = "scripts.infer:main"
